# neurocomputer

./: .gitignore  Concepts for Efficient Self modifying Ai Agents.md  README.md  STATUS.md  automated_cli_client.py  cpp.py  deploy_android.sh  requirements.txt  run_voice_agent.sh  server.py  turnserver.conf.example  update_livekit_tunnel.sh
neurolang/: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
neurolang/docs/: ARCHITECTURE.md  COMPARISON.md  FRAMEWORK.md  LANDSCAPE.md  LITERATURE_REVIEW_CATEGORICAL_DL.md  NEUROCODE_NEURONET.md  OPEN_DECISIONS.md  PAPER_NEUROLANG_FOUNDATIONS.md  RESEARCH.md  RESEARCH_BRAINSTORM_CATEGORICAL_TRAINING.md  ROADMAP.md  STATUS.md  VISION.md  VISION_NOTES_RAW.md
neurolang/docs/plans/: 2026-04-26-phase-1.5-bundle.md  2026-04-26-repl.md  2026-04-27-agent-delegate.md  2026-04-27-reason-stdlib-expansion.md
neurolang/docs/specs/: 2026-04-26-phase-1.5-bundle-design.md  2026-04-26-repl-design.md  2026-04-27-agent-delegate-design.md  2026-04-27-multi-provider-design.md  2026-04-27-reason-stdlib-expansion-design.md
neurolang/examples/: agent_delegate.py  email_demo.py  live_demo_test.py  research_flow.py
neurolang/neurolang/: __init__.py  __main__.py  _providers.py  budget.py  cache.py  cli.py  compile.py  discover.py  effect.py  flow.py  memory.py  neuro.py  plan.py  propose.py  recovery.py  registry.py  repl.py  suggest.py
neurolang/neurolang/render/: __init__.py  mermaid.py
neurolang/neurolang/runtime/: __init__.py  context.py  local.py  protocol.py
neurolang/neurolang/stdlib/: __init__.py  agent.py  model.py  (+5 more)
neurolang/tests/: test_categorical_laws.py  test_cli.py  test_compile.py  test_discover.py  test_effects_budget.py  test_memory_and_registry.py  test_plan.py  test_propose.py  test_providers.py  test_recovery.py  test_render.py  test_repl.py  test_smoke.py  test_suggest.py
(+807 files in other folders)
