[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neurolang"
version = "0.0.1"
description = "A modular language for composing intelligent agents — typed neuros, flows, and cognitive primitives"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Gopal Kumar", email = "gopalkr022@gmail.com" },
]
keywords = ["agents", "ai", "llm", "agentic", "framework", "language", "composition"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "mypy>=1.0",
]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.30"]
web = ["requests>=2.30", "beautifulsoup4>=4.12"]
all = [
    "openai>=1.0",
    "anthropic>=0.30",
    "requests>=2.30",
    "beautifulsoup4>=4.12",
]

[project.scripts]
neurolang = "neurolang.cli:main"

[project.urls]
Homepage = "https://github.com/neurocomputer-in/neurolang"
Repository = "https://github.com/neurocomputer-in/neurolang"
Issues = "https://github.com/neurocomputer-in/neurolang/issues"

[tool.hatch.build.targets.wheel]
packages = ["neurolang"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
